--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "snake-game",
   "version": "1.0.0",
+  "homepage": "https://ABHISHEK-G0YAL.github.io/react-snake-game",
   "description": "",
   "keywords": [],
   "main": "src/index.tsx",
@@ -12,14 +13,22 @@
   "devDependencies": {
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "gh-pages": "^6.3.0",
     "loader-utils": "3.2.1",
     "typescript": "4.9.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
